--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    :root { --bg: #0b1020; --card:#121833; --muted:#c7cbe6; --text:#f5f7ff; --accent:#6aa7ff; --ring:#8bc0ff; --ok:#58d7a1; }
+    :root { --bg: #64bed0; --card:#121833; --muted:#c7cbe6; --text:#f5f7ff; --accent:#6aa7ff; --ring:#8bc0ff; --ok:#58d7a1; }
     *{box-sizing:border-box}
     html,body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);background:linear-gradient(180deg,#0b1020 0%, #111936 100%);}
     a{color:var(--accent);text-decoration:none}
@@ -251,3 +251,4 @@
   </script>
 </body>
 </html>
+
