--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    /* 🎨 Palette personnalisée */
+    
     :root {
-      --bg: #432818;      /* fond principal */
-      --card: #6f1d1b;    /* cartes */
-      --muted: #ffe6a7;   /* texte secondaire */
-      --text: #ffe6a7;    /* texte */
-      --accent: #99582a;  /* liens / boutons */
-      --ring: #ffe6a7;    /* points & highlights */
-      --ok: #ffe6a7;      /* couleur d'accent (logo) */
+      --bg: #432818;     
+      --card: #6f1d1b;    
+      --muted: #ffe6a7;   
+      --text: #ffe6a7;    
+      --accent: #99582a;  
+      --ring: #ffe6a7;   
+      --ok: #ffe6a7;      
     }
 
     *{box-sizing:border-box}
@@ -80,7 +80,7 @@
     }
     .btn:hover{filter:brightness(1.1)}
 
-    /* Mobile */
+    
     @media (max-width: 860px){
       .hero{grid-template-columns:1fr}
       .grid.cols-3{grid-template-columns:1fr}
@@ -94,3 +94,4 @@
   ...
 </body>
 </html>
+
