--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       --ok: #ffe6a7;      
     }
 
-    *{box-sizing:border-box}
+    {box-sizing:border-box}
     html,body{
       margin:0;
       font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
@@ -94,4 +94,5 @@
   ...
 </body>
 </html>
+
 
