--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-corrige car mauvais affichage : 
-<!DOCTYPE html>
+modifie le site suivant pour ajouter la palette de couleurs (#6f1d1b;#432818;#99582a;#ffe6a7): <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
@@ -10,72 +9,50 @@ corrige car mauvais affichage :
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-  :root {
-    --bg: #432818;      /* fond principal */
-    --card1: #6f1d1b;   /* carte foncée */
-    --card2: #99582a;   /* carte claire */
-    --text: #ffe6a7;    /* texte clair */
-    --muted: #e2c98d;   /* texte secondaire */
-    --accent: #99582a;  /* boutons / liens */
-    --ring: #ffe6a7;    /* points & highlights */
-    --ok: #ffe6a7;      /* logo accent */
-  }
+    :root { --bg: #64bed0; --card:#121833; --muted:#c7cbe6; --text:#f5f7ff; --accent:#6aa7ff; --ring:#8bc0ff; --ok:#58d7a1; }
+    *{box-sizing:border-box}
+    html,body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);background-color:#787827 ;}
+    a{color:var(--accent);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .container{max-width:1050px;margin:0 auto;padding:20px}
+    header{position:sticky;top:0;backdrop-filter:blur(8px);background:rgba(30, 32, 11, 0.6);border-bottom:1px solid rgba(255,255,255,.08);z-index:10}
+    nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    nav .brand{display:flex;align-items:center;gap:10px;font-weight:700}
+    nav .brand .dot{width:10px;height:10px;border-radius:50%;background:var(--ok);box-shadow:0 0 18px var(--ok)}
+    nav ul{display:flex;gap:14px;list-style:none;margin:0;padding:0}
+    nav a{padding:10px 12px;border-radius:10px}
+    nav a:hover{background:rgba(255,255,255,.06)}
+    .hero{display:grid;grid-template-columns:1.2fr .8fr;gap:28px;align-items:center;padding:36px 0}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.12);border-radius:20px;box-shadow:0 10px 30px rgba(0,0,0,.35);}
+    .card.pad{padding:22px}
+    h1{font-size:clamp(28px, 4vw, 44px);line-height:1.1;margin:0 0 10px}
+    h2{font-size:clamp(22px, 3vw, 30px);margin:0 0 10px}
+    h3{margin:0 0 8px}
+    p{color:var(--muted);line-height:1.65}
+    .badges{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
+    .badge{background:#18224a;border:1px solid rgba(255,255,255,.14);padding:6px 10px;border-radius:999px;font-size:12px}
+    .grid{display:grid;gap:18px}
+    .grid.cols-3{grid-template-columns:repeat(3,1fr)}
+    .grid.cols-2{grid-template-columns:repeat(2,1fr)}
+    .kpi{display:flex;align-items:baseline;gap:8px}
+    .kpi .n{font-weight:700;font-size:28px}
+    .list{display:grid;gap:12px}
+    .list .item{display:flex;gap:12px}
+    .list .dot{width:10px;height:10px;border-radius:50%;background:var(--ring);margin-top:8px;box-shadow:0 0 16px var(--ring)}
+    footer{opacity:.8;padding:40px 0}
+    .section{padding:28px 0}
+    .tag{font-size:12px;letter-spacing:.08em;text-transform:uppercase;opacity:.8}
+    .btn{display:inline-block;padding:10px 14px;border:1px solid rgba(255,255,255,.18);border-radius:12px;background:#64812e}
+    .btn:hover{filter:brightness(1.08)}
 
-  html, body {
-    margin:0;
-    font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    color: var(--text);
-    background-color: var(--bg);
-  }
-
-  a { color: var(--accent); text-decoration: none; }
-  a:hover { text-decoration: underline; }
-
-  header {
-    position: sticky;
-    top: 0;
-    backdrop-filter: blur(8px);
-    background: rgba(111, 29, 27, 0.9); /* rouge foncé translucide */
-    border-bottom: 1px solid rgba(255,255,255,.1);
-    z-index: 10;
-  }
-
-  .card {
-    background: linear-gradient(145deg, var(--card1), var(--card2));
-    border: 1px solid rgba(255,255,255,.15);
-    border-radius: 20px;
-    box-shadow: 0 8px 20px rgba(0,0,0,.4);
-    color: var(--text);
-  }
-
-  .badge {
-    background: var(--accent);
-    color: var(--text);
-    border: none;
-    padding: 6px 10px;
-    border-radius: 999px;
-    font-size: 12px;
-  }
-
-  .btn {
-    display: inline-block;
-    padding: 10px 14px;
-    border-radius: 12px;
-    background: var(--accent);
-    color: var(--text);
-    font-weight: 600;
-    transition: background 0.2s ease;
-  }
-  .btn:hover { background: #6f1d1b; }
-
-  footer {
-    background: #6f1d1b;
-    color: var(--muted);
-    padding: 30px 0;
-    border-top: 1px solid rgba(255,255,255,.2);
-  }
-</style>
-
+    /* Mobile */
+    @media (max-width: 860px){
+      .hero{grid-template-columns:1fr}
+      .grid.cols-3{grid-template-columns:1fr}
+      .grid.cols-2{grid-template-columns:1fr}
+      nav ul{overflow:auto}
+    }
+  </style>
 </head>
 <body>
   <header>
