--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-modifie le site suivant pour ajouter la palette de couleurs (#6f1d1b;#432818;#99582a;#ffe6a7): <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
@@ -251,3 +251,4 @@ modifie le site suivant pour ajouter la palette de couleurs (#6f1d1b;#432818;#99
   </script>
 </body>
 </html>
+
