--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    :root { --bg: #64bed0; --card:#121833; --muted:#c7cbe6; --text:#f5f7ff; --accent:#6aa7ff; --ring:#8bc0ff; --ok:#58d7a1; }
+    :root { --bg: #0b1020; --card:#121833; --muted:#c7cbe6; --text:#f5f7ff; --accent:#6aa7ff; --ring:#8bc0ff; --ok:#58d7a1; }
     *{box-sizing:border-box}
-    html,body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);background-color:#787827 ;}
+    html,body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);background:linear-gradient(180deg,#0b1020 0%, #111936 100%);}
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
     .container{max-width:1050px;margin:0 auto;padding:20px}
-    header{position:sticky;top:0;backdrop-filter:blur(8px);background:rgba(30, 32, 11, 0.6);border-bottom:1px solid rgba(255,255,255,.08);z-index:10}
+    header{position:sticky;top:0;backdrop-filter:blur(8px);background:rgba(11,16,32,.6);border-bottom:1px solid rgba(255,255,255,.08);z-index:10}
     nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
     nav .brand{display:flex;align-items:center;gap:10px;font-weight:700}
     nav .brand .dot{width:10px;height:10px;border-radius:50%;background:var(--ok);box-shadow:0 0 18px var(--ok)}
@@ -42,7 +42,7 @@
     footer{opacity:.8;padding:40px 0}
     .section{padding:28px 0}
     .tag{font-size:12px;letter-spacing:.08em;text-transform:uppercase;opacity:.8}
-    .btn{display:inline-block;padding:10px 14px;border:1px solid rgba(255,255,255,.18);border-radius:12px;background:#64812e}
+    .btn{display:inline-block;padding:10px 14px;border:1px solid rgba(255,255,255,.18);border-radius:12px;background:#162044}
     .btn:hover{filter:brightness(1.08)}
 
     /* Mobile */
@@ -251,4 +251,3 @@
   </script>
 </body>
 </html>
-
