--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio — Joanes Forges | BTS SIO SISR</title>
-  <meta name="description" content="Portfolio de Joanes Forges — Étudiant en BTS SIO option SISR au pôle STS Sainte‑Marie, Joinville‑le‑Pont. Présentation, formation, BTS SIO, TPs SISR." />
+  <meta name="description" content="Portfolio de Joanes Forges — Étudiant en BTS SIO option SISR au pôle STS Sainte-Marie, Joinville-le-Pont. Présentation, formation, BTS SIO, TPs SISR." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     header{position:sticky;top:0;backdrop-filter:blur(8px);background:rgba(11,16,32,.6);border-bottom:1px solid rgba(255,255,255,.08);z-index:10}
     nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
     nav .brand{display:flex;align-items:center;gap:10px;font-weight:700}
-    nav .brand .dot{width:10px;height:10px;border-radius:50%;background:var(--ok);box-shadow:0 0 18px var(--ok)}
+    nav .brand .dot{width:10px;height:10px;border-radius:50%;background:var(--ok);box-shadow:0 0 18px var(--ok);flex-shrink:0}
     nav ul{display:flex;gap:14px;list-style:none;margin:0;padding:0}
     nav a{padding:10px 12px;border-radius:10px}
     nav a:hover{background:rgba(255,255,255,.06)}
@@ -37,8 +37,8 @@
     .kpi{display:flex;align-items:baseline;gap:8px}
     .kpi .n{font-weight:700;font-size:28px}
     .list{display:grid;gap:12px}
-    .list .item{display:flex;gap:12px}
-    .list .dot{width:10px;height:10px;border-radius:50%;background:var(--ring);margin-top:8px;box-shadow:0 0 16px var(--ring)}
+    .list .item{display:flex;gap:12px;align-items:center}
+    .list .dot{width:10px;height:10px;border-radius:50%;background:var(--ring);box-shadow:0 0 16px var(--ring);flex-shrink:0}
     footer{opacity:.8;padding:40px 0}
     .section{padding:28px 0}
     .tag{font-size:12px;letter-spacing:.08em;text-transform:uppercase;opacity:.8}
@@ -78,7 +78,7 @@
         <h1>Joanes Forges</h1>
         <h2>Étudiant en <strong>BTS SIO — option SISR</strong></h2>
         <p>
-          Actuellement au <strong>pôle STS Sainte‑Marie</strong> à <strong>Joinville‑le‑Pont</strong>, je me forme à la conception, au déploiement et à la sécurisation d'infrastructures réseaux et systèmes.
+          Actuellement au <strong>pôle STS Sainte-Marie</strong> à <strong>Joinville-le-Pont</strong>, je me forme à la conception, au déploiement et à la sécurisation d'infrastructures réseaux et systèmes.
         </p>
         <div class="badges">
           <span class="badge">Admin systèmes & réseaux</span>
@@ -95,8 +95,8 @@
         <div class="card pad">
           <h3>En bref</h3>
           <div class="kpi"><span class="n">BTS SIO</span><span>Option SISR</span></div>
-          <div class="kpi"><span class="n">Pôle STS</span><span>Sainte‑Marie</span></div>
-          <div class="kpi"><span class="n">Ville</span><span>Joinville‑le‑Pont</span></div>
+          <div class="kpi"><span class="n">Pôle STS</span><span>Sainte-Marie</span></div>
+          <div class="kpi"><span class="n">Ville</span><span>Joinville-le-Pont</span></div>
         </div>
         <div class="card pad">
           <h3>Objectifs</h3>
@@ -159,14 +159,14 @@
               <span class="dot"></span>
               <div>
                 <strong>Bac Général</strong> — spécialités <strong>Mathématiques</strong> et <strong>SVT</strong><br/>
-                <em>Lycée d'Arsonval</em>, Saint‑Maur‑des‑Fossés
+                <em>Lycée d'Arsonval</em>, Saint-Maur-des-Fossés
               </div>
             </div>
             <div class="item">
               <span class="dot"></span>
               <div>
                 <strong>BTS SIO — Option SISR (en cours)</strong><br/>
-                <em>Pôle STS Sainte‑Marie</em>, Joinville‑le‑Pont
+                <em>Pôle STS Sainte-Marie</em>, Joinville-le-Pont
               </div>
             </div>
           </div>
@@ -197,12 +197,12 @@
             </article>
             <article class="card pad">
               <h3>Virtualisation & réseau sous Proxmox</h3>
-              <p>Création d’un cluster de test, VLAN, routage inter‑VLAN, mise en place de snapshots et sauvegardes programmées.</p>
+              <p>Création d’un cluster de test, VLAN, routage inter-VLAN, mise en place de snapshots et sauvegardes programmées.</p>
               <p><a href="#">➡ Rapport / Repo</a></p>
             </article>
             <article class="card pad">
-              <h3>Services Web sécurisés</h3>
-              <p>Serveur web Nginx/Apache, reverse proxy, certificats TLS (Let's Encrypt), et supervision via métriques.</p>
+              <h3>Création de site statique</h3>
+              <p>Conception et déploiement d’un site web statique hébergé sur GitHub Pages, avec personnalisation en HTML/CSS.</p>
               <p><a href="#">➡ Rapport / Repo</a></p>
             </article>
           </div>
@@ -218,16 +218,16 @@
           <h2>Me contacter</h2>
           <p>Envie d’échanger sur un projet, un stage ou une alternance ?</p>
           <ul>
-            <li>Email : <a href="mailto:prenom.nom@email.com">prenom.nom@email.com</a></li>
-            <li>LinkedIn : <a href="#">linkedin.com/in/joanes‑forges</a></li>
-            <li>GitHub : <a href="#">github.com/joanes‑forges</a></li>
+            <li>Email : <a href="mailto:Joanes0708@gmail.com">Joanes0708@gmail.com</a></li>
+            <li>LinkedIn : <a href="#">linkedin.com/in/joanes-forges</a></li>
+            <li>GitHub : <a href="#">github.com/joanes-forges</a></li>
           </ul>
         </div>
         <div class="card pad">
           <h3>CV</h3>
-          <p>Ajoute ici un lien vers ton CV (PDF) :</p>
+          <p>Ajoute ici un lien vers ton CV (PDF) :</p>
           <p><a class="btn" href="#">Télécharger mon CV</a></p>
-          <p style="opacity:.8">Astuce : uploade ton CV dans le repo GitHub et pointe ce bouton vers le fichier PDF.</p>
+          <p style="opacity:.8">Astuce : uploade ton CV dans le repo GitHub et pointe ce bouton vers le fichier PDF.</p>
         </div>
       </div>
     </section>
