--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
           <div class="timeline-content right">
             <h3>2022 - 2024</h3>
             <p><strong>BTS SIO option SISR</strong><br>
-               Lycée [Nom du lycée], [Ville]<br>
+               Lycée d'Arsonval, Saint-Maur-des-Fossés<br>
                Spécialisation en administration système, réseaux et cybersécurité.<br>
                Projets réalisés : Déploiement de serveurs, gestion de parc informatique, sécurisation de réseaux.
             </p>
@@ -736,6 +736,7 @@ document.addEventListener('DOMContentLoaded', fetchAndDisplayARRSS);
   </script>
 </body>
 </html>
+
 
 
 
